add requests and ansible for cloud host merge

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ paramiko = "*"
 prompt-toolkit = "*"
 ascii-graph = "*"
 openshift = "*"
+requests = "*"
+ansible = "*"
 
 [requires]
 python_version = "3.8"
