--- a/ansible.cfg
+++ b/ansible.cfg
@@ -9,3 +9,5 @@ retry_files_enabled = False
 vault_password_file = ./_secrets/vault_key
 collections_paths = ./
 stdout_callback = yaml
+interpreter_python = auto_silent
+force_valid_group_names = ignore
