vagrant config from glops project

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,11 @@ hosts/
 # ignore pry_history
 .pry_history
 
+# ignore vagrant output
+.vagrant
+# ignore vagrant hosts maker files
+.vagrant_hostip_cache.yml
+.vagrant_gitlab_versions.yml
 
 # ignore cache files
 *.cache
