--- a/roles/k3s/defaults/main.yml
+++ b/roles/k3s/defaults/main.yml
@@ -1,3 +1,7 @@
 ---
   systemd_dir: /etc/systemd/system
-  extra_server_args: "--no-deploy traefik --write-kubeconfig-mode 664"
+  extra_server_args:
+    - "--write-kubeconfig-mode 664"
+  k3s_kubectl_api_host: 127.0.0.1
+  k3s_kubectl_api_port: 6443
+  local_clusters_path: "{{ role_path }}/../../clusters"
