--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -1,2 +1,5 @@
 ---
-docker_package_host: 'https://download.docker.com/linux/ubuntu/'
+  gcp_host: false
+  docker_package_host: 'https://download.docker.com/linux/ubuntu/'
+  gcp_mtu: 1460
+  docker_network_mtu: "{{ gcp_mtu }}"
