--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -34,8 +34,8 @@
       - 'containerd.io'
 
 - name: Deploy Docker daemon.json.
-  copy:
-    src: files/daemon.json
+  template:
+    src: daemon.json.j2
     dest: /etc/docker/daemon.json
   tags:
     - daemonconfig
