--- a/roles/k3s/tasks/download.yml
+++ b/roles/k3s/tasks/download.yml
@@ -1,11 +1,4 @@
 ---
-
-- name: Delete k3s if already present
-  file:
-    path: /usr/local/bin/k3s
-    state: absent
-
-
 - name: Download k3s binary x64 from k3s releases
   get_url:
     url: "https://github.com/rancher/k3s/releases/download/{{ k3s_version }}/k3s"
@@ -13,6 +6,7 @@
     owner: root
     group: root
     mode: 0755
+    force: yes
   when: (k3s_proxy_url is not defined)
 
 - name: Download k3s binary x64 from local proxy
@@ -22,4 +16,25 @@
     owner: root
     group: root
     mode: 0755
+    force: yes
   when: (k3s_proxy_url is defined)
+
+# - name: Download k3s binary x64 from k3s releases
+#   get_url:
+#     url: "https://github.com/rancher/k3s/releases/download/{{ k3s_version }}/k3s"
+#     dest: /usr/local/bin/k3s
+#     owner: root
+#     group: root
+#     mode: 0755
+#     checksum: "sha256:{{ k3s_checksum }}"
+#   when: (k3s_proxy_url is not defined)
+
+# - name: Download k3s binary x64 from local proxy
+#   get_url:
+#     url: "{{k3s_proxy_url }}/k3s-{{ k3s_version}}"
+#     dest: /usr/local/bin/k3s
+#     owner: root
+#     group: root
+#     mode: 0755
+#     checksum: "sha256:{{ k3s_checksum }}"
+#   when: (k3s_proxy_url is defined)
