--- a/roles/k3s/tasks/download.yml
+++ b/roles/k3s/tasks/download.yml
@@ -6,7 +6,7 @@
     owner: root
     group: root
     mode: 0755
-    force: yes
+    checksum: "sha256:{{ k3s_checksum }}"
   when: (k3s_proxy_url is not defined)
 
 - name: Download k3s binary x64 from local proxy
@@ -16,25 +16,5 @@
     owner: root
     group: root
     mode: 0755
-    force: yes
+    checksum: "sha256:{{ k3s_checksum }}"
   when: (k3s_proxy_url is defined)
-
-# - name: Download k3s binary x64 from k3s releases
-#   get_url:
-#     url: "https://github.com/rancher/k3s/releases/download/{{ k3s_version }}/k3s"
-#     dest: /usr/local/bin/k3s
-#     owner: root
-#     group: root
-#     mode: 0755
-#     checksum: "sha256:{{ k3s_checksum }}"
-#   when: (k3s_proxy_url is not defined)
-
-# - name: Download k3s binary x64 from local proxy
-#   get_url:
-#     url: "{{k3s_proxy_url }}/k3s-{{ k3s_version}}"
-#     dest: /usr/local/bin/k3s
-#     owner: root
-#     group: root
-#     mode: 0755
-#     checksum: "sha256:{{ k3s_checksum }}"
-#   when: (k3s_proxy_url is defined)
