fix gitlab-specific things

--- a/playbooks/firstprovision.yml
+++ b/playbooks/firstprovision.yml
@@ -2,7 +2,7 @@
   become: yes
   become_method: sudo
   vars:
-    ansible_ssh_user: "{{ lookup('env', 'firstuser') }}"
+    ansible_ssh_user: "{{ lookup('env', 'FIRSTUSER') }}"
   roles:
     - waldorf
 
@@ -13,12 +13,12 @@
   roles:
     - basesetup
 
-# mailreay
+# mailrelay
 - hosts: all
   become: yes
   become_method: sudo
   roles:
-    - mailrelay
+    - mailrelay_gitlab
 
 # updates
 - hosts: all
