--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,46 @@
 ---
 latest_release:
-  version: 13.10.0
-  date: 2021-03-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.10.0-ee
-  post: https://about.gitlab.com/releases/2021/03/22/gitlab-13-10-released/
+  version: 13.11.0
+  date: 2021-04-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.11.0-ee
+  post: https://about.gitlab.com/releases/2021/04/22/gitlab-13-11-released/
 latest:
-  name: v13.10.3-ee
-  version: 13.10.3
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.10.3-ee
-  date: 2021-04-13
+  name: v13.11.1-ee
+  version: 13.11.1
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.1-ee
+  date: 2021-04-22
 '13':
   latest_release:
-    version: 13.10.0
-    date: 2021-03-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.10.0-ee
-    post: https://about.gitlab.com/releases/2021/03/22/gitlab-13-10-released/
+    version: 13.11.0
+    date: 2021-04-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.11.0-ee
+    post: https://about.gitlab.com/releases/2021/04/22/gitlab-13-11-released/
   latest:
-    name: v13.10.3-ee
-    version: 13.10.3
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.10.3-ee
-    date: 2021-04-13
+    name: v13.11.1-ee
+    version: 13.11.1
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.1-ee
+    date: 2021-04-22
+  '13.11':
+    release:
+      version: 13.11.0
+      date: 2021-04-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.11.0-ee
+      post: https://about.gitlab.com/releases/2021/04/22/gitlab-13-11-released/
+    latest:
+      name: v13.11.1-ee
+      version: 13.11.1
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.1-ee
+      date: 2021-04-22
+    13.11.1:
+      name: v13.11.1-ee
+      version: 13.11.1
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.1-ee
+      date: 2021-04-22
+    13.11.0:
+      name: v13.11.0-ee
+      version: 13.11.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.0-ee
+      date: 2021-04-21
   '13.10':
     release:
       version: 13.10.0
