--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,41 @@
 ---
 latest_release:
-  version: 13.11.0
-  date: 2021-04-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.11.0-ee
-  post: https://about.gitlab.com/releases/2021/04/22/gitlab-13-11-released/
+  version: 13.12.0
+  date: 2021-05-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.12.0-ee
+  post: https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/
 latest:
-  name: v13.11.4-ee
-  version: 13.11.4
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.4-ee
-  date: 2021-05-14
+  name: v13.12.0-ee
+  version: 13.12.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.0-ee
+  date: 2021-05-21
 '13':
   latest_release:
-    version: 13.11.0
-    date: 2021-04-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.11.0-ee
-    post: https://about.gitlab.com/releases/2021/04/22/gitlab-13-11-released/
+    version: 13.12.0
+    date: 2021-05-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.12.0-ee
+    post: https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/
   latest:
-    name: v13.11.4-ee
-    version: 13.11.4
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.11.4-ee
-    date: 2021-05-14
+    name: v13.12.0-ee
+    version: 13.12.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.0-ee
+    date: 2021-05-21
+  '13.12':
+    release:
+      version: 13.12.0
+      date: 2021-05-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.12.0-ee
+      post: https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/
+    latest:
+      name: v13.12.0-ee
+      version: 13.12.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.0-ee
+      date: 2021-05-21
+    13.12.0:
+      name: v13.12.0-ee
+      version: 13.12.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.0-ee
+      date: 2021-05-21
   '13.11':
     release:
       version: 13.11.0
