--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,14 +1,41 @@
 ---
 latest_release:
-  version: 13.12.0
-  date: 2021-05-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.12.0-ee
-  post: https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/
+  version: 14.0.0
+  date: 2021-06-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.0.0-ee
+  post: https://about.gitlab.com/releases/2021/06/22/gitlab-14-0-released/
 latest:
-  name: v13.12.4-ee
-  version: 13.12.4
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.4-ee
-  date: 2021-06-14
+  name: v14.0.0-ee
+  version: 14.0.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.0.0-ee
+  date: 2021-06-21
+'14':
+  latest_release:
+    version: 14.0.0
+    date: 2021-06-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.0.0-ee
+    post: https://about.gitlab.com/releases/2021/06/22/gitlab-14-0-released/
+  latest:
+    name: v14.0.0-ee
+    version: 14.0.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.0.0-ee
+    date: 2021-06-21
+  '14.0':
+    release:
+      version: 14.0.0
+      date: 2021-06-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.0.0-ee
+      post: https://about.gitlab.com/releases/2021/06/22/gitlab-14-0-released/
+    latest:
+      name: v14.0.0-ee
+      version: 14.0.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.0.0-ee
+      date: 2021-06-21
+    14.0.0:
+      name: v14.0.0-ee
+      version: 14.0.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.0.0-ee
+      date: 2021-06-21
 '13':
   latest_release:
     version: 13.12.0
@@ -16,10 +43,10 @@ latest:
     url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.12.0-ee
     post: https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/
   latest:
-    name: v13.12.4-ee
-    version: 13.12.4
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.4-ee
-    date: 2021-06-14
+    name: v13.12.5-ee
+    version: 13.12.5
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.5-ee
+    date: 2021-06-21
   '13.12':
     release:
       version: 13.12.0
@@ -27,10 +54,15 @@ latest:
       url: https://gitlab.com/gitlab-org/gitlab/-/releases/v13.12.0-ee
       post: https://about.gitlab.com/releases/2021/05/22/gitlab-13-12-released/
     latest:
-      name: v13.12.4-ee
-      version: 13.12.4
-      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.4-ee
-      date: 2021-06-14
+      name: v13.12.5-ee
+      version: 13.12.5
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.5-ee
+      date: 2021-06-21
+    13.12.5:
+      name: v13.12.5-ee
+      version: 13.12.5
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v13.12.5-ee
+      date: 2021-06-21
     13.12.4:
       name: v13.12.4-ee
       version: 13.12.4
