--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,41 @@
 ---
 latest_release:
-  version: 14.1.0
-  date: 2021-07-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.1.0-ee
-  post: https://about.gitlab.com/releases/2021/07/22/gitlab-14-1-released/
+  version: 14.2.0
+  date: 2021-08-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.2.0-ee
+  post: https://about.gitlab.com/releases/2021/08/22/gitlab-14-2-released/
 latest:
-  name: v14.1.3-ee
-  version: 14.1.3
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.1.3-ee
-  date: 2021-08-17
+  name: v14.2.0-ee
+  version: 14.2.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.2.0-ee
+  date: 2021-08-20
 '14':
   latest_release:
-    version: 14.1.0
-    date: 2021-07-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.1.0-ee
-    post: https://about.gitlab.com/releases/2021/07/22/gitlab-14-1-released/
+    version: 14.2.0
+    date: 2021-08-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.2.0-ee
+    post: https://about.gitlab.com/releases/2021/08/22/gitlab-14-2-released/
   latest:
-    name: v14.1.3-ee
-    version: 14.1.3
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.1.3-ee
-    date: 2021-08-17
+    name: v14.2.0-ee
+    version: 14.2.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.2.0-ee
+    date: 2021-08-20
+  '14.2':
+    release:
+      version: 14.2.0
+      date: 2021-08-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.2.0-ee
+      post: https://about.gitlab.com/releases/2021/08/22/gitlab-14-2-released/
+    latest:
+      name: v14.2.0-ee
+      version: 14.2.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.2.0-ee
+      date: 2021-08-20
+    14.2.0:
+      name: v14.2.0-ee
+      version: 14.2.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.2.0-ee
+      date: 2021-08-20
   '14.1':
     release:
       version: 14.1.0
