--- a/roles/k3d/defaults/main.yml
+++ b/roles/k3d/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 k3d_arch: k3d-linux-amd64
-k3d_version: v5.0.1
-k3d_checksum: 84a45821b16df2fb60ab9144bad3d0e67805a2bfee17bee51b09bc1e75c0fc10
+k3d_version: v5.0.3
+k3d_checksum: '018421fdff567df5df3840e75501a40199501ce6bf25e1f2dd259f74e13519f3'
 gcp_mtu: 1460
 docker_network_mtu: "{{ gcp_mtu }}"
 tcp_mss_mtu: "{{ docker_network_mtu|int - 90}}"
