--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,41 @@
 ---
 latest_release:
-  version: 14.6.0
-  date: 2021-12-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.6.0-ee
-  post: https://about.gitlab.com/releases/2021/12/22/gitlab-14-6-released/
+  version: 14.7.0
+  date: 2022-01-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.7.0-ee
+  post: https://about.gitlab.com/releases/2022/01/22/gitlab-14-7-released/
 latest:
-  name: v14.6.3-ee
-  version: 14.6.3
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.6.3-ee
-  date: 2022-01-18
+  name: v14.7.0-ee
+  version: 14.7.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.7.0-ee
+  date: 2022-01-21
 '14':
   latest_release:
-    version: 14.6.0
-    date: 2021-12-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.6.0-ee
-    post: https://about.gitlab.com/releases/2021/12/22/gitlab-14-6-released/
+    version: 14.7.0
+    date: 2022-01-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.7.0-ee
+    post: https://about.gitlab.com/releases/2022/01/22/gitlab-14-7-released/
   latest:
-    name: v14.6.3-ee
-    version: 14.6.3
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.6.3-ee
-    date: 2022-01-18
+    name: v14.7.0-ee
+    version: 14.7.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.7.0-ee
+    date: 2022-01-21
+  '14.7':
+    release:
+      version: 14.7.0
+      date: 2022-01-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.7.0-ee
+      post: https://about.gitlab.com/releases/2022/01/22/gitlab-14-7-released/
+    latest:
+      name: v14.7.0-ee
+      version: 14.7.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.7.0-ee
+      date: 2022-01-21
+    14.7.0:
+      name: v14.7.0-ee
+      version: 14.7.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.7.0-ee
+      date: 2022-01-21
   '14.6':
     release:
       version: 14.6.0
