Dumped gitlab and k3s release caches [skip ci]

--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,41 @@
 ---
 latest_release:
-  version: 14.7.0
-  date: 2022-01-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.7.0-ee
-  post: https://about.gitlab.com/releases/2022/01/22/gitlab-14-7-released/
+  version: 14.8.0
+  date: 2022-02-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.8.0-ee
+  post: https://about.gitlab.com/releases/2022/02/22/gitlab-14-8-released/
 latest:
-  name: v14.7.3-ee
-  version: 14.7.3
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.7.3-ee
-  date: 2022-02-15
+  name: v14.8.0-ee
+  version: 14.8.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.8.0-ee
+  date: 2022-02-21
 '14':
   latest_release:
-    version: 14.7.0
-    date: 2022-01-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.7.0-ee
-    post: https://about.gitlab.com/releases/2022/01/22/gitlab-14-7-released/
+    version: 14.8.0
+    date: 2022-02-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.8.0-ee
+    post: https://about.gitlab.com/releases/2022/02/22/gitlab-14-8-released/
   latest:
-    name: v14.7.3-ee
-    version: 14.7.3
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.7.3-ee
-    date: 2022-02-15
+    name: v14.8.0-ee
+    version: 14.8.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.8.0-ee
+    date: 2022-02-21
+  '14.8':
+    release:
+      version: 14.8.0
+      date: 2022-02-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.8.0-ee
+      post: https://about.gitlab.com/releases/2022/02/22/gitlab-14-8-released/
+    latest:
+      name: v14.8.0-ee
+      version: 14.8.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.8.0-ee
+      date: 2022-02-21
+    14.8.0:
+      name: v14.8.0-ee
+      version: 14.8.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.8.0-ee
+      date: 2022-02-21
   '14.7':
     release:
       version: 14.7.0
