--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,41 @@
 ---
 latest_release:
-  version: 14.8.0
-  date: 2022-02-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.8.0-ee
-  post: https://about.gitlab.com/releases/2022/02/22/gitlab-14-8-released/
+  version: 14.9.0
+  date: 2022-03-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.9.0-ee
+  post: https://about.gitlab.com/releases/2022/03/22/gitlab-14-9-released/
 latest:
-  name: v14.8.4-ee
-  version: 14.8.4
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.8.4-ee
-  date: 2022-03-16
+  name: v14.9.0-ee
+  version: 14.9.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.9.0-ee
+  date: 2022-03-21
 '14':
   latest_release:
-    version: 14.8.0
-    date: 2022-02-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.8.0-ee
-    post: https://about.gitlab.com/releases/2022/02/22/gitlab-14-8-released/
+    version: 14.9.0
+    date: 2022-03-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.9.0-ee
+    post: https://about.gitlab.com/releases/2022/03/22/gitlab-14-9-released/
   latest:
-    name: v14.8.4-ee
-    version: 14.8.4
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.8.4-ee
-    date: 2022-03-16
+    name: v14.9.0-ee
+    version: 14.9.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.9.0-ee
+    date: 2022-03-21
+  '14.9':
+    release:
+      version: 14.9.0
+      date: 2022-03-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v14.9.0-ee
+      post: https://about.gitlab.com/releases/2022/03/22/gitlab-14-9-released/
+    latest:
+      name: v14.9.0-ee
+      version: 14.9.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.9.0-ee
+      date: 2022-03-21
+    14.9.0:
+      name: v14.9.0-ee
+      version: 14.9.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v14.9.0-ee
+      date: 2022-03-21
   '14.8':
     release:
       version: 14.8.0
