--- a/cached_gitlab_tag_info.yml
+++ b/cached_gitlab_tag_info.yml
@@ -1,25 +1,41 @@
 ---
 latest_release:
-  version: 15.0.0
-  date: 2022-05-22
-  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v15.0.0-ee
-  post: https://about.gitlab.com/releases/2022/05/22/gitlab-15-0-released/
+  version: 15.1.0
+  date: 2022-06-22
+  url: https://gitlab.com/gitlab-org/gitlab/-/releases/v15.1.0-ee
+  post: https://about.gitlab.com/releases/2022/06/22/gitlab-15-1-released/
 latest:
-  name: v15.0.3-ee
-  version: 15.0.3
-  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v15.0.3-ee
-  date: 2022-06-16
+  name: v15.1.0-ee
+  version: 15.1.0
+  url: https://gitlab.com/gitlab-org/gitlab/-/tags/v15.1.0-ee
+  date: 2022-06-21
 '15':
   latest_release:
-    version: 15.0.0
-    date: 2022-05-22
-    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v15.0.0-ee
-    post: https://about.gitlab.com/releases/2022/05/22/gitlab-15-0-released/
+    version: 15.1.0
+    date: 2022-06-22
+    url: https://gitlab.com/gitlab-org/gitlab/-/releases/v15.1.0-ee
+    post: https://about.gitlab.com/releases/2022/06/22/gitlab-15-1-released/
   latest:
-    name: v15.0.3-ee
-    version: 15.0.3
-    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v15.0.3-ee
-    date: 2022-06-16
+    name: v15.1.0-ee
+    version: 15.1.0
+    url: https://gitlab.com/gitlab-org/gitlab/-/tags/v15.1.0-ee
+    date: 2022-06-21
+  '15.1':
+    release:
+      version: 15.1.0
+      date: 2022-06-22
+      url: https://gitlab.com/gitlab-org/gitlab/-/releases/v15.1.0-ee
+      post: https://about.gitlab.com/releases/2022/06/22/gitlab-15-1-released/
+    latest:
+      name: v15.1.0-ee
+      version: 15.1.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v15.1.0-ee
+      date: 2022-06-21
+    15.1.0:
+      name: v15.1.0-ee
+      version: 15.1.0
+      url: https://gitlab.com/gitlab-org/gitlab/-/tags/v15.1.0-ee
+      date: 2022-06-21
   '15.0':
     release:
       version: 15.0.0
